duicontrolpanel (0.7.5~unreleased) unstable; urgency=low

  * new version
  * Fixes NB#160780 - Signal connection error in duicontrolpanel
  * Fixes 161074 - Duicontrolpanel applet translations loaded twice
  * Fixes: NB#160864 - Unable to access contents within System Settings

 -- Robert Manner <robert.manner@blumsoft.eu>  Fri, 19 Mar 2010 13:35:18 +0100

duicontrolpanel (0.7.4) unstable; urgency=low

  * most used reload

 -- Laszlo Gal <laszlo.gal@blumsoft.eu>  Tue, 16 Mar 2010 17:43:40 +0100

duicontrolpanel (0.7.3) unstable; urgency=low

  * Fixes: NB#156027 DcpAppletIf leaks memory

 -- Viktor Nagy <viktor.nagy@blumsoft.eu>  Fri, 12 Mar 2010 10:55:10 +0100

duicontrolpanel (0.7.2) unstable; urgency=low

  * Fixes NB#159307 - DuiControlpanel page animation is not right
  * updated ui according to spec changes (category buttons on main page, etc)

 -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 10 Mar 2010 13:00:27 +0100

duicontrolpanel (0.7.1) unstable; urgency=low

  [ David Kedves ]
  * Fix for debian/control

  [ Robert Manner ]
  * Fixes NB#156748: could not define first line value for brief in
    applet for dcp

  [ Laszlo Pere ]
  * Fixes NB#159299: Duicontrolpanel does not pop-up on a dbus signal
  * Fixes NB#149492: Phone network settings view cannot be opened from Status 
    indicator menu

 -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 03 Mar 2010 11:37:25 +0100

duicontrolpanel (0.7.0) unstable; urgency=low

  [ Robert Manner ]
  * Fixes: NB#154090 Localization of the applet loaded too late
  * Fixes: NB#154094 Duicontrolpanel has many help menu items
  * Fixes: NB#138717 System Settings takes too long to launch
  * Implements pausing the loading on mainpage while user is scrolling
    (experimental)

  [ Viktor Nagy ]
  * Fixes: NB#156262 duicontrolpanel's D-Bus service is not installed 
    with duicontrolpanel but with libduicontrolpanel-dev

  [ Laszlo Pere ]
  * Fixes: NB#156790 Dcp fully disables an applet when its crashes