@@ -8,8 +8,7 @@
 #include <DuiContentItem>
 
 
-#define DEBUG
-#include "../../../lib/src/dcpdebug.h"
+#include "dcpdebug.h"
 
 
 DcpSingleComponent::DcpSingleComponent (
