@@ -1,72 +1,0 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE TS>
-<TS version="2.0">
-<context>
-<name></name>
-<message id="dcp_no_applet_name">
-<location filename="../src/page/dcpappletpage.cpp" line="133"/>
-<source>Plugin not available</source>
-<translation>en,Plugin not available,en</translation>
-</message>
-<message id="dcp_no_applet_title">
-<location filename="../src/page/dcpappletpage.cpp" line="137"/>
-<source>Missing plugin</source>
-<translation>en,Missing plugin,en</translation>
-</message>
-<message id="qtn_sett_main_account">
-<location filename="../src/page/maintranslations.cpp" line="11"/>
-<source>Service accounts</source>
-<translation>en,Service accounts,en</translation>
-</message>
-<message id="qtn_sett_main_application">
-<location filename="../src/page/maintranslations.cpp" line="18"/>
-<source>Applications</source>
-<translation>en,Applications,en</translation>
-</message>
-<message id="qtn_sett_main_look">
-<location filename="../src/page/maintranslations.cpp" line="38"/>
-<source>Look &amp; Feel</source>
-<translation>en,Look &amp; Feel,en</translation>
-</message>
-<message id="qtn_sett_main_connectivity">
-<location filename="../src/page/maintranslations.cpp" line="45"/>
-<source>Connectivity</source>
-<translation>en,Connectivity,en</translation>
-</message>
-<message id="qtn_sett_main_region">
-<location filename="../src/page/maintranslations.cpp" line="52"/>
-<source>Language &amp; Region</source>
-<translation>en,Language &amp; Region,en</translation>
-</message>
-<message id="qtn_sett_main_data">
-<location filename="../src/page/maintranslations.cpp" line="59"/>
-<source>Device system</source>
-<translation>en,Device system,en</translation>
-</message>
-<message id="qtn_sett_main_combined">
-<location filename="../src/page/maintranslations.cpp" line="66"/>
-<source>Accounts &amp; Applications</source>
-<translation>en,Accounts &amp; Applications,en</translation>
-</message>
-<message id="qtn_sett_main_title">
-<location filename="../src/page/maintranslations.cpp" line="79"/>
-<source>Settings</source>
-<translation>en,Settings,en</translation>
-</message>
-<message id="qtn_sett_main_most">
-<location filename="../src/page/maintranslations.cpp" line="82"/>
-<source>Most recently used</source>
-<translation>en,Most recently used,en</translation>
-</message>
-<message id="qtn_sett_main_other">
-<location filename="../src/page/maintranslations.cpp" line="85"/>
-<source>Other Categories</source>
-<translation>en,Other Categories,en</translation>
-</message>
-<message id="qtn_comm_exit">
-<location filename="../src/page/maintranslations.cpp" line="87"/>
-<source>Exit</source>
-<translation>en,Exit,en</translation>
-</message>
-</context>
-</TS>
